--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"jspdf-autotable": "^3.8.2",
 		"multer": "^1.4.5-lts.1",
 		"primereact": "^10.7.0",
+		"react-scripts": "^5.0.0",
 		"react": "^17.0.2",
 		"react-apexcharts": "^1.4.0",
 		"react-bootstrap": "^2.10.2",
@@ -46,7 +47,6 @@
 		"react-is": "^18.0.0",
 		"react-paginate": "^8.2.0",
 		"react-router-dom": "^5.3.4",
-		"react-scripts": "5.0.0",
 		"recharts": "^2.12.7",
 		"stylis": "^4.1.1",
 		"stylis-plugin-rtl": "2.0.2",
