--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"version": "1.1.0",
 	"private": true,
 	"dependencies": {
+		"@babel/plugin-proposal-private-property-in-object": "^7.21.11”,
 		"@chakra-ui/icons": "^1.1.5",
 		"@chakra-ui/react": "1.8.8",
 		"@chakra-ui/system": "^1.12.1",
@@ -53,6 +54,7 @@
 		"typescript": "^4.9.5",
 		"web-vitals": "^1.1.2",
 		"yup": "^1.4.0"
+		
 	},
 	"scripts": {
 		"start": "react-scripts start",
