--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-REACT_APP_API_URL=https://sjuni.onrender.com/
+REACT_APP_API_URL=http://localhost:5500
 REACT_APP_API_KEY=UYrxr0BuxMOGjXqlO7DvDi07WL4KmYVo0ZW1UxEPz1G0a762Qew
 DB_HOST=localhost
 DB_USER=root
