--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
 	"version": "1.1.0",
 	"private": true,
 	"dependencies": {
-		
 		"@chakra-ui/icons": "^1.1.5",
 		"@chakra-ui/react": "1.8.8",
 		"@chakra-ui/system": "^1.12.1",
@@ -36,7 +35,6 @@
 		"jspdf-autotable": "^3.8.2",
 		"multer": "^1.4.5-lts.1",
 		"primereact": "^10.7.0",
-		"react-scripts": "^5.0.0",
 		"react": "^17.0.2",
 		"react-apexcharts": "^1.4.0",
 		"react-bootstrap": "^2.10.2",
@@ -48,13 +46,13 @@
 		"react-is": "^18.0.0",
 		"react-paginate": "^8.2.0",
 		"react-router-dom": "^5.3.4",
+		"react-scripts": "5.0.0",
 		"recharts": "^2.12.7",
 		"stylis": "^4.1.1",
 		"stylis-plugin-rtl": "2.0.2",
 		"typescript": "^4.9.5",
 		"web-vitals": "^1.1.2",
 		"yup": "^1.4.0"
-		
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -83,7 +81,6 @@
 		]
 	},
 	"devDependencies": {
-"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
 		"@types/react-calendar": "^3.5.2",
 		"@types/react-router-dom": "^5.3.3",
 		"gh-pages": "^3.2.3"
