--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
 		]
 	},
 	"devDependencies": {
-		"@babel/plugin-proposal-private-property-in-object": "version_number",
+		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
 		"@types/react-calendar": "^3.5.2",
 		"@types/react-router-dom": "^5.3.3",
 		"gh-pages": "^3.2.3"
